plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.25.0'
}

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    jcenter()
}

ext {
    junitVersion = '5.10.2'
}

compileJava {
    sourceCompatibility = JavaVersion.VERSION_23 // JDK 23로 설정
    targetCompatibility = JavaVersion.VERSION_23  // JDK 23로 설정
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'org.example.baramdemo'
    mainClass = 'org.example.baramdemo.HelloApplication'
}

javafx {
    version = '17.0.6'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    implementation files('lib/jnativehook-2.2.2.jar')
    implementation 'org.openjfx:javafx-controls:23'
    implementation 'org.openjfx:javafx-web:23'
    implementation 'org.openjfx:javafx-fxml:23'
    implementation('org.controlsfx:controlsfx:11.2.1')
    implementation('org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0')

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
    useJUnitPlatform()
}

jlink {
    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'app'
    }
}

jlinkZip {
    group = 'distribution'
}

run {
    jvmArgs = [
            "--module-path", "C:\\Program Files\\javafx-sdk-23.0.1\\lib",  // JavaFX SDK 경로
            "--add-modules", "javafx.controls,javafx.fxml"
    ]
}